--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header .logo{font-size:clamp(2rem,6vw,4rem);color:var(--color-texto);text-shadow
 header .logo span{color:var(--color-acento)}
 nav.main-nav{margin-top:20px;display:flex;gap:15px;flex-wrap:wrap;justify-content:center;z-index:10}
 nav.main-nav a{padding:10px 15px;font-weight:600;border-radius:10px;transition:.3s;color:var(--color-gris-claro);will-change:transform,background}
-nav.main-nav a:hover{background:var(--color-acento);color:#520C8D;transform:translateY(-3px)}
+nav.main-nav a:hover{background:var(--color-gris-medio);color:#520C8D;transform:translateY(-3px)}
 
 /* SECCIÓN SALA 3D */
 .sala-container{position:relative;width:90%;max-width:1400px;height:70vh;margin:50px auto;border-radius:20px;overflow:hidden;transform-style:preserve-3d;box-shadow:0 20px 50px rgba(0,0,0,.08);perspective:1000px}
