--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ a{text-decoration:none;color:inherit}
 section{padding:80px 10%;}
 
 :root {
-    --color-fondo: #F9F7FB;          /* Fondo lavanda muy claro elegante */
+    --color-fondo: #520C8D;          /* Fondo lavanda muy claro elegante */
     --color-texto: #2A2438;          /* Morado grisáceo oscuro para texto */
     --color-acento: #6A0DAD;         /* Morado elegante (púrpura intenso) */
     --color-acento-hover: #520C8D;   /* Morado profundo para hover */
