--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header video{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:co
 header .logo{font-size:clamp(2rem,6vw,4rem);color:var(--color-texto);text-shadow:2px 2px 15px rgba(0,0,0,.1);font-family:'Playfair Display',serif;font-weight:700}
 header .logo span{color:var(--color-acento)}
 nav.main-nav{margin-top:20px;display:flex;gap:15px;flex-wrap:wrap;justify-content:center;z-index:10}
-nav.main-nav a{padding:10px 15px;font-weight:600;border-radius:10px;transition:.3s;color:var(--color-gris-claro);will-change:transform,background}
+nav.main-nav a{padding:10px 15px;font-weight:600;border-radius:10px;transition:.3s;color:var(--color-acento);will-change:transform,background}
 nav.main-nav a:hover{background:var(--color-gris-medio);color:#520C8D;transform:translateY(-3px)}
 
 /* SECCIÓN SALA 3D */
